Add all required DLL's into source control to enable others to build project.

--- a/DependencyAnalyzer2008/DependencyAnalyzer2008.csproj
+++ b/DependencyAnalyzer2008/DependencyAnalyzer2008.csproj
@@ -60,30 +60,30 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.AnalysisServices, Version=10.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
-      <HintPath>D:\keith\Documents\Repos\SQL2008DLLs\Microsoft.AnalysisServices.dll</HintPath>
+      <HintPath>..\References\SQL2008DLLs\Microsoft.AnalysisServices.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.SqlServer.ConnectionInfo, Version=10.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
-      <HintPath>D:\keith\Documents\Repos\SQL2008DLLs\Microsoft.SqlServer.ConnectionInfo.dll</HintPath>
+      <HintPath>..\References\SQL2008DLLs\Microsoft.SqlServer.ConnectionInfo.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.SqlServer.DTSPipelineWrap, Version=10.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
-      <HintPath>D:\keith\Documents\Repos\SQL2008DLLs\Microsoft.SqlServer.DTSPipelineWrap.dll</HintPath>
+      <HintPath>..\References\SQL2008DLLs\Microsoft.SqlServer.DTSPipelineWrap.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.SQLServer.DTSRuntimeWrap, Version=10.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=x86">
       <EmbedInteropTypes>True</EmbedInteropTypes>
-      <HintPath>D:\keith\Documents\Repos\SQL2008DLLs\Microsoft.SqlServer.DTSRuntimeWrap.dll</HintPath>
+      <HintPath>..\References\SQL2008DLLs\Microsoft.SqlServer.DTSRuntimeWrap.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.SQLServer.ManagedDTS, Version=10.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
-      <HintPath>D:\keith\Documents\Repos\SQL2008DLLs\Microsoft.SQLServer.ManagedDTS.dll</HintPath>
+      <HintPath>..\References\SQL2008DLLs\Microsoft.SQLServer.ManagedDTS.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.SqlServer.Management.Sdk.Sfc, Version=10.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
-      <HintPath>D:\keith\Documents\Repos\SQL2008DLLs\Microsoft.SqlServer.Management.Sdk.Sfc.dll</HintPath>
+      <HintPath>..\References\SQL2008DLLs\Microsoft.SqlServer.Management.Sdk.Sfc.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.SqlServer.Smo, Version=10.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
-      <HintPath>D:\keith\Documents\Repos\SQL2008DLLs\Microsoft.SqlServer.Smo.dll</HintPath>
+      <HintPath>..\References\SQL2008DLLs\Microsoft.SqlServer.Smo.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.SqlServer.SqlEnum, Version=10.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>D:\keith\Documents\Repos\SQL2008DLLs\Microsoft.SqlServer.SqlEnum.dll</HintPath>
+      <HintPath>..\References\SQL2008DLLs\Microsoft.SqlServer.SqlEnum.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
