--- a/DependencyViewer/DependencyViewer.csproj
+++ b/DependencyViewer/DependencyViewer.csproj
@@ -43,15 +43,15 @@
   <ItemGroup>
     <Reference Include="Microsoft.Msagl, Version=3.0.0.0, Culture=neutral, PublicKeyToken=640c57aa40e7ae7d, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\automatic-graph-layout\GraphLayout\tools\GraphViewerGDI\bin\Release\Microsoft.Msagl.dll</HintPath>
+      <HintPath>..\References\MSAGL\Microsoft.Msagl.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Msagl.Drawing, Version=3.0.0.0, Culture=neutral, PublicKeyToken=8a3d7c21d5fa1306, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\automatic-graph-layout\GraphLayout\tools\GraphViewerGDI\bin\Release\Microsoft.Msagl.Drawing.dll</HintPath>
+      <HintPath>..\References\MSAGL\Microsoft.Msagl.Drawing.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Msagl.GraphViewerGdi, Version=3.0.0.0, Culture=neutral, PublicKeyToken=fffc27ea4058b3a1, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\automatic-graph-layout\GraphLayout\tools\GraphViewerGDI\bin\Release\Microsoft.Msagl.GraphViewerGdi.dll</HintPath>
+      <HintPath>..\References\MSAGL\Microsoft.Msagl.GraphViewerGdi.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
