--- a/DependencyAnalyzer2014/DependencyAnalyzer2014.csproj
+++ b/DependencyAnalyzer2014/DependencyAnalyzer2014.csproj
@@ -74,6 +74,12 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\References\SQL2012DLLs\Microsoft.SqlServer.SqlEnum.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.DataTransformationServices.VsIntegration">
+      <HintPath>$(VS140COMNTOOLS)\..\IDE\PrivateAssemblies\Microsoft.DataTransformationServices.VsIntegration.DLL</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.DataWarehouse.VsIntegration">
+      <HintPath>$(VS140COMNTOOLS)\..\IDE\PrivateAssemblies\Microsoft.DataWarehouse.VsIntegration.DLL</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Web.Services" />
@@ -123,6 +129,9 @@
     </Compile>
     <Compile Include="..\DependencyAnalyzer2008\SSRSEnumerator.cs">
       <Link>SSRSEnumerator.cs</Link>
+    </Compile>
+    <Compile Include="..\DependencyAnalyzer2012\Serialization.cs">
+      <Link>Serialization.cs</Link>
     </Compile>
     <Compile Include="..\DependencyAnalyzer2012\SSASEnumerator.cs">
       <Link>SSASEnumerator.cs</Link>
